# TrackerGenerator

./: .gitignore  CMakeLists.txt  GUIConfig.xml  README.md
codeDB/Detectors/BackgroundSubtractMotionDetector/: BackgroundSubtractMotionDetector.cpp
codeDB/Detectors/BackgroundSubtractMotionDetector/BackgroundSubtract/: BackgroundSubtract.h
codeDB/Detectors/PedestrianDetector/: PedestrianDetector.h
codeDB/Detectors/PedestrianDetector/c4/: c4.cpp
codeDB/Detectors/YoloDarknetDetector/: YoloDarknetDetector.cpp
codeDB/Detectors/YoloOpenCVDetector/: YoloOpenCVDetector.cpp
codeDB/Trackers/Common/Track/: Track.cpp
codeDB/WorkerTemplate/: CMakeLists.txt
codeDB/WorkerTemplate/src/: BaseWorkerClass.cpp  BaseWorkerClass.h  WorkerClass.cpp  WorkerClass.h  main.cpp
code_templates/: basic_exe.cpp  temoto_ai_cmakelists.xml
file_template_parser/: CMakeLists.txt  README.md
file_template_parser/include/file_template_parser/: file_template_parser.h  template_container.h  template_management_tools.h
file_template_parser/src/: template_container.cpp  template_import_test.cpp  template_management_tools.cpp
file_template_parser/test/: CmakeLists.txt
file_template_parser/test/templates/: temoto_ai_packagexml.xml  template.xml
main/: main.cpp
